Layout product page

--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,4 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 
 RewriteRule ^shop/(.+)$ tp_category.php?name=$1
+RewriteRule ^product/(.+)$ tp_product.php?id=$1
