Page news + fixs

--- a/.htaccess
+++ b/.htaccess
@@ -8,4 +8,6 @@ RewriteRule ^product/(.+)$ tp_product.php?id=$1
 RewriteRule ^faq/(.+)$ tp_help.php?id=$1
 RewriteRule faq tp_help.php
 
-RewriteRule news tp_news.php
+RewriteRule ^news/(.+)/(.+)$ tp_news.php?search=$1&value=$2 [L,QSA]
+RewriteRule ^news/(.+)$ tp_news.php?page=$1 [L,QSA]
+RewriteRule news tp_news.php [L,QSA]
