--- a/.htaccess
+++ b/.htaccess
@@ -11,3 +11,5 @@ RewriteRule faq tp_help.php
 RewriteRule ^news/(.+)/(.+)$ tp_news.php?search=$1&value=$2 [L,QSA]
 RewriteRule ^news/(.+)$ tp_news.php?page=$1 [L,QSA]
 RewriteRule news tp_news.php [L,QSA]
+
+RewriteRule list tp_list.php [L,QSA]
