Layout rules page

--- a/.htaccess
+++ b/.htaccess
@@ -19,3 +19,5 @@ RewriteRule privacy tp_privacy.php [L,QSA]
 RewriteRule ^order/(.+)$ tp_order.php?id=$1 [L,QSA]
 
 RewriteRule consultant tp_consultant.php [L,QSA]
+
+RewriteRule rules tp_rules.php [L,QSA]
